Início da Integração de Cadastro de Professor

--- a/professor/usuarios/index.html
+++ b/professor/usuarios/index.html
@@ -264,7 +264,7 @@
                 <div class="col-md-6 lab-inp">
                     <label for="tipo-select" class="form-label">Tipo:</label>
                     <select class="form-select tipo-select" id="tipo-select-edit" id="tipoUsuarioModalEditar" onChange="deletarCampo()">
-                        <option selected>SELECIONE O TIPO DO USUÁRIO</option>
+                        <option disabled="disabled" selected>SELECIONE O TIPO DO USUÁRIO</option>
                         <option value="2">Aluno</option>
                         <option value="3">Avaliador</option>
                     </select>
@@ -405,7 +405,7 @@
                 <div class="col-md-6 lab-inp">
                     <label for="tipo-select" class="form-label">Tipo:</label>
                     <select class="form-select tipo-select" id="tipo-select-criar" onChange="alterarInputTipoUsuario()">
-                        <option selected>SELECIONE O TIPO DO USUÁRIO</option>
+                        <option disabled="disabled" selected>SELECIONE O TIPO DO USUÁRIO</option>
                         <option value="2">Aluno</option>
                         <option value="3">Avaliador</option>
                     </select>
