ajustando componentes com as páginas da instituição

--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -27,10 +27,10 @@
     <header>
         <div class="primeira_parte">
             <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-            <h1 id="nomeInstituicao"></h1>
+            <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
         </div>
 
-        <a href="../index.html">
+        <a href="#">
             <img src="../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
         </a>
     </header>
