--- a/instituicao/cursos/turmas/index.html
+++ b/instituicao/cursos/turmas/index.html
@@ -13,18 +13,16 @@
         rel="stylesheet">
     <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../componentes/header/styles_header.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../componentes/header/style.css">
-    <link rel="stylesheet" href="../componentes/header/styles_header.css">
-    <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="../../componentes/header/styles_header.css">
     <link rel="stylesheet" href="../../componentes/side_menu/styles_side_menu.css">
+    <script src="script.js" defer></script>
 </head>
 
 <div class="bg"></div>
 
 <body>
+
     <div class="sidebar">
         <div class="logo-details">
             <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
@@ -77,6 +75,17 @@
             }
         }
     </script>
+
+    <header>
+        <div class="primeira_parte">
+            <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
+            <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+        </div>
+
+        <a href="#">
+            <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
+        </a>
+    </header>
 
     <div class="container-geral">
         <div class="container">
