--- a/instituicao/cursos/turmas/vizualizacao_grupo/index.html
+++ b/instituicao/cursos/turmas/vizualizacao_grupo/index.html
@@ -13,6 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../../../componentes/header/styles_header.css">
     <link rel="stylesheet" href="../../../componentes/side_menu/styles_side_menu.css">
     <title>GRUPO</title>
 </head>
@@ -70,6 +71,18 @@
             }
         }
     </script>
+
+    <header>
+        <div class="primeira_parte">
+            <img src="../../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
+            <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+        </div>
+
+        <a href="#">
+            <img src="../../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
+        </a>
+    </header>
+
     <div class="grupo">
         <div class="tema">
             <h1>Tema do projeto:</h1>
