--- a/instituicao/usuarios/index.html
+++ b/instituicao/usuarios/index.html
@@ -21,8 +21,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
     <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css">
+    <link rel="shortcut icon" href="../../home/images-global/logo-azul.svg" type="image/x-icon">
 
-    <title>USUÁRIOS EXISTENTES</title>
+    <title>Usuários existentes</title>
 </head>
 <div class="bg"></div>
 
@@ -30,7 +31,7 @@
     <header>
         <div class="primeira_parte">
             <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-            <h1 class="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+            <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
         </div>
 
         <a href="../index.html">
@@ -44,25 +45,18 @@
             <i class="bx bx-menu" id="btn"></i>
         </div>
             <li>
-                <a href="#">
+                <a href="../cursos/index.html">
                     <i class="bx bx-group"></i>
-                    <span class="links_name">Turmas existentes</span>
+                    <span class="links_name">Cursos existentes</span>
                 </a>
-                <span class="tooltip">Turmas</span>
+                <span class="tooltip">Cursos</span>
             </li>
             <li>
-                <a href="#">
+                <a href="./index.html">
                     <i class="bx bx-user"></i>
                     <span class="links_name">Usuários cadastrados</span>
                 </a>
                 <span class="tooltip">Usuários</span>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="bx bx-user-plus"></i>
-                    <span class="links_name">Cadastrar novo usuário</span>
-                </a>
-                <span class="tooltip">Novo usuário</span>
             </li>
             <li>
                 <a href="#">
@@ -72,7 +66,7 @@
                 <span class="tooltip">Avaliações</span>
             </li>
             <li class="profile">
-                <a href="#">
+                <a href="../../../home/login/index.html">
                     <i class="bx bx-log-out" id="log_out"></i>
                     <span class="links_name">Log Out</span>
                 </a>
