--- a/instituicao/perfil/infos_pagamento/editar/index.html
+++ b/instituicao/perfil/infos_pagamento/editar/index.html
@@ -24,22 +24,59 @@
   <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
 
   <link rel="stylesheet" href="../../../componentes/header/styles_header.css" />
+  <link rel="stylesheet" href="../../../componentes/side_menu/styles_side_menu.css">
   <script src="./script.js" defer></script>
 
   <title>EDITAR INFORMAÇÕES DE PAGAMENTO</title>
 </head>
 
 <body>
+
   <header>
     <div class="primeira_parte">
-      <img src="../../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-      <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
+        <img src="../../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
+        <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
     </div>
 
     <a href="../../../index.html">
-      <img src="../../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
+        <img src="../../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
     </a>
-  </header>
+</header>
+
+<div class="sidebar">
+  <div class="logo-details">
+      <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
+      <i class="bx bx-menu" id="btn"></i>
+  </div>
+      <li>
+          <a href="../index.html">
+              <i class="bx bx-group"></i>
+              <span class="links_name">Cursos existentes</span>
+          </a>
+          <span class="tooltip">Cursos</span>
+      </li>
+      <li>
+          <a href="../../usuarios/index.html">
+              <i class="bx bx-user"></i>
+              <span class="links_name">Usuários cadastrados</span>
+          </a>
+          <span class="tooltip">Usuários</span>
+      </li>
+      <li>
+          <a href="#">
+              <i class="bx bx-edit"></i>
+              <span class="links_name">Formulário da banca</span>
+          </a>
+          <span class="tooltip">Avaliações</span>
+      </li>
+      <li class="profile">
+          <a href="../../../home/login/index.html">
+              <i class="bx bx-log-out" id="log_out"></i>
+              <span class="links_name">Log Out</span>
+          </a>
+          <span class="tooltip">Log Out</span>
+      </li>
+</div>
 
   <div class="container mt-5 container">
     <h1>EDITAR INFORMAÇÕES DE PAGAMENTO</h1>
