--- a/instituicao/perfil/editar/index.html
+++ b/instituicao/perfil/editar/index.html
@@ -23,8 +23,8 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
   <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js"></script>
   <link rel="stylesheet" href="../../componentes/header/styles_header.css" />
-  <link rel="stylesheet" href="../../componentes/side_menu/styles_side_menu.css"
-  >
+  <link rel="stylesheet" href="../../componentes/side_menu/styles_side_menu.css">
+  <link rel="shortcut icon" href="../../../home/images-global/logo-azul.svg" type="image/x-icon">
   <script defer src="./script.js"></script>
 
   <title>Editar Perfil</title>
@@ -37,11 +37,11 @@
         <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
         <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
     </div>
-
+  
     <a href="../../index.html">
         <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
     </a>
-</header>
+  </header>
 
 <div class="sidebar">
   <div class="logo-details">
