--- a/instituicao/perfil/infos_pagamento/editar/index.html
+++ b/instituicao/perfil/infos_pagamento/editar/index.html
@@ -29,7 +29,9 @@
 
   <link rel="stylesheet" href="../../../componentes/side_menu/styles_side_menu.css">
   <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
-  <title>EDITAR INFORMAÇÕES DE PAGAMENTO</title>
+  <link rel="shortcut icon" href="../../../../home/images-global/logo-azul.svg" type="image/x-icon">
+
+  <title>Editar pagamento</title>
 </head>
 
 <body>
