--- a/instituicao/perfil/infos_pagamento/index.html
+++ b/instituicao/perfil/infos_pagamento/index.html
@@ -19,10 +19,12 @@
   <script defer src="./script.js"></script>
   <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="../../componentes/side_menu/styles_side_menu.css">
-  <title>INFORMAÇÕES DE PAGAMENTO</title>
+  <link rel="shortcut icon" href="../../../home/images-global/logo-azul.svg" type="image/x-icon">
+  <title>Perfil - Informações de pagamento</title>
 </head>
 
 <body>
+  
   <header>
     <div class="primeira_parte">
         <img src="../../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
@@ -33,41 +35,6 @@
         <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
     </a>
 </header>
-
-<div class="sidebar">
-  <div class="logo-details">
-      <img class="icon" src="../../../home/images-global/logo-branca.svg" alt="logo" />
-      <i class="bx bx-menu" id="btn"></i>
-  </div>
-      <li>
-          <a href="../index.html">
-              <i class="bx bx-group"></i>
-              <span class="links_name">Cursos existentes</span>
-          </a>
-          <span class="tooltip">Cursos</span>
-      </li>
-      <li>
-          <a href="../../usuarios/index.html">
-              <i class="bx bx-user"></i>
-              <span class="links_name">Usuários cadastrados</span>
-          </a>
-          <span class="tooltip">Usuários</span>
-      </li>
-      <li>
-          <a href="#">
-              <i class="bx bx-edit"></i>
-              <span class="links_name">Formulário da banca</span>
-          </a>
-          <span class="tooltip">Avaliações</span>
-      </li>
-      <li class="profile">
-          <a href="../../../home/login/index.html">
-              <i class="bx bx-log-out" id="log_out"></i>
-              <span class="links_name">Log Out</span>
-          </a>
-          <span class="tooltip">Log Out</span>
-      </li>
-</div>
 
   <div class="sidebar">
     <div class="logo-details">
