componentes das páginas da instituição colocados

--- a/instituicao/cursos/turmas/vizualizacao_grupo/index.html
+++ b/instituicao/cursos/turmas/vizualizacao_grupo/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="../../../componentes/header/styles_header.css">
     <link rel="stylesheet" href="../../../componentes/side_menu/styles_side_menu.css">
-    <title>GRUPO</title>
+    <link rel="shortcut icon" href="../../../../home/images-global/logo-azul.svg" type="image/x-icon">
+    <title id="nomeGrupo">Nome do Grupo</title>
 </head>
 
 <body>
@@ -78,7 +79,7 @@
             <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
         </div>
 
-        <a href="#">
+        <a href="../../../index.html">
             <img src="../../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
         </a>
     </header>
