--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -17,8 +17,9 @@
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css">
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="../../home/images-global/logo-azul.svg" type="image/x-icon">
 
-    <title>Cursos</title>
+    <title>Cursos existentes</title>
 </head>
 <div class="bg"></div>
 
@@ -30,7 +31,7 @@
             <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
         </div>
 
-        <a href="#">
+        <a href="../index.html">
             <img src="../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
         </a>
     </header>
