--- a/instituicao/cursos/turmas/index.html
+++ b/instituicao/cursos/turmas/index.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../componentes/header/styles_header.css">
     <link rel="stylesheet" href="../../componentes/side_menu/styles_side_menu.css">
+    <link rel="shortcut icon" href="../../../home/images-global/logo-azul.svg" type="image/x-icon">
     <script src="script.js" defer></script>
+    <title>Turmas</title>
 </head>
 
 <div class="bg"></div>
@@ -82,7 +84,7 @@
             <h1 id="nomeInstituicao">NOME DA INSTITUIÇÃO</h1>
         </div>
 
-        <a href="#">
+        <a href="../../index.html">
             <img src="../../componentes/header/img/perfil_instituicao.svg" alt="perfil" />
         </a>
     </header>
