ícones adicionados no head e componentes ajustados

--- a/home/compra/index.html
+++ b/home/compra/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../componentes/footer/styles_footer.css">
     <link rel="stylesheet" href="planos.css">
     <script defer src="scripts.js"></script>
+    <link rel="shortcut icon" href="../images-global/logo-azul.svg" type="image/x-icon">
     <title>Planos</title>
 </head>
 
