--- a/home/login/esqueceu_a_senha.html
+++ b/home/login/esqueceu_a_senha.html
@@ -4,12 +4,13 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Redefinição de senha</title>
+    <title>Redefinir senha</title>
     <link rel="stylesheet" href="esqueceu_a_senha.css" />
     <link rel="stylesheet" href="../componentes/header/styles_header.css" />
     <link rel="stylesheet" href="../componentes/footer/styles_footer.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons&style=outlined" rel="stylesheet" />
+    <link rel="shortcut icon" href="../images-global/logo-azul.svg" type="image/x-icon">
 </head>
 
 <body>
