--- a/professor/perfil/editar/index.html
+++ b/professor/perfil/editar/index.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="../../componentes/side_menu/styles_side_menu.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet" />
 
+    <link rel="shortcut icon" href="../../../home/images-global/logo-azul.svg" type="image/x-icon">
     <title>Editar Perfil</title>
 </head>
 
