--- a/professor/perfil/index.html
+++ b/professor/perfil/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="../componentes/header/styles_header.css">
   <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css">
   <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
+  <link rel="shortcut icon" href="../../home/images-global/logo-azul.svg" type="image/x-icon">
   <title>Perfil</title>
 </head>
 
