--- a/home/compra/pagamento/index.html
+++ b/home/compra/pagamento/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="http://cdn.jsdelivr.net/jquery.maskedinput/1.3.1/jquery.maskedinput.js">
     </script>
 
+    <link rel="shortcut icon" href="../../images-global/logo-azul.svg" type="image/x-icon">
     <title>Pagamento</title>
 </head>
 
