--- a/home/login/index.html
+++ b/home/login/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons&style=outlined" rel="stylesheet" />
     <script defer src="index.js"></script>
+    <link rel="shortcut icon" href="../images-global/logo-azul.svg" type="image/x-icon">
 </head>
 
 <body>
