--- a/professor/cursos/turmas/index.html
+++ b/professor/cursos/turmas/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
+    <link rel="shortcut icon" href="../../../home/images-global/logo-azul.svg" type="image/x-icon">
     <title>Minhas Turmas</title>
 </head>
 
