header de aluno feito

--- a/aluno/componentes/header/index.html
+++ b/aluno/componentes/header/index.html
@@ -17,11 +17,11 @@
     <header>
         <div class="primeira_parte">
             <img src="./img/grupo_pessoas.svg" alt="grupo_pessoas" />
-            <h1 id="nomeProfessor">NOME DO PROFESSOR</h1>
+            <h1 id="nomeGrupoAluno">NOME DO GRUPO</h1>
         </div>
 
         <a href="#">
-            <img src="./img/perfil_professor.svg" alt="icone" />
+            <img id="fotoPerfilAluno" src="img/foto_padrao.svg" alt="foto" />
         </a>
     </header>
 </body>
