--- a/professor/perfil/index.html
+++ b/professor/perfil/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css">
   <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
   <link rel="shortcut icon" href="../../home/images-global/logo-azul.svg" type="image/x-icon">
-  <title>Perfil</title>
+  <title>Seu perfil</title>
 </head>
 
 <div class="bg"></div>
