ajustes no perfil da instituição

--- a/instituicao/index.html
+++ b/instituicao/index.html
@@ -17,7 +17,9 @@
   <link rel="stylesheet" href="componentes/header/styles_header.css">
   <link rel="stylesheet" href="./componentes/side_menu/styles_side_menu.css">
   <script src="script.js" defer></script>
-  <title>NEXUS TCC -</title>
+
+  <link rel="shortcut icon" href="../home/images-global/logo-azul.svg" type="image/x-icon">
+  <title>Seu Perfil</title>
 </head>
 
 <div class="bg"></div>
@@ -32,11 +34,7 @@
     </div>
     
       <li>
-<<<<<<< Updated upstream
         <a href="./cursos/index.html">
-=======
-        <a href="./cursos/">
->>>>>>> Stashed changes
           <i class="bx bx-group"></i>
           <span class="links_name">Cursos existentes</span>
         </a>
@@ -57,7 +55,7 @@
         <span class="tooltip">Avaliações</span>
       </li>
       <li class="profile">
-        <a onclick="logout()"">
+        <a onclick="logout()">
           <i class="bx bx-log-out" id="log_out"></i>
           <span class="links_name">Log Out</span>
         </a>
