--- a/aluno/planner/index.html
+++ b/aluno/planner/index.html
@@ -25,12 +25,12 @@
 
     <div class="col-md-12 container-topicos">
         <div class="col-md-10 listagem-topicos">
-            <div class="col-md-2 topico">
+            <div class="col-md-3 topico">
                 <div class="col-md-12 titulo">
                     <h1>NOME DO TÓPICO</h1>
                     <img src="./img/menu.svg" alt="">
                 </div>
-                <button class="col-md-12 botao-adicionar">Adicionar tarefa</button>
+                <button class="col-md-12 botao-adicionar"><img src="./img/mais.svg" alt=""> Adicionar tarefa</button>
                 <div class="col-md-12 card-tarefa">
                     <div class="tarefa">
                         <div class="nome-tarefa">
@@ -86,12 +86,12 @@
                 </div>
             </div>
 
-            <div class="col-md-2 topico">
+            <div class="col-md-3 topico">
                 <div class="col-md-12 titulo">
                     <h1>NOME DO TÓPICO</h1>
                     <img src="./img/menu.svg" alt="">
                 </div>
-                <button class="col-md-12 botao-adicionar">Adicionar tarefa</button>
+                <button class="col-md-12 botao-adicionar"><img src="./img/mais.svg" alt=""> Adicionar tarefa</button>
                 <div class="col-md-12 card-tarefa">
                     <div class="tarefa">
                         <div class="nome-tarefa">
@@ -111,12 +111,12 @@
                 </div>
             </div>
 
-            <div class="col-md-2 topico">
+            <div class="col-md-3 topico">
                 <div class="col-md-12 titulo">
                     <h1>NOME DO TÓPICO</h1>
                     <img src="./img/menu.svg" alt="">
                 </div>
-                <button class="col-md-12 botao-adicionar">Adicionar tarefa</button>
+                <button class="col-md-12 botao-adicionar"><img src="./img/mais.svg" alt=""> Adicionar tarefa</button>
                 <div class="col-md-12 card-tarefa">
                     <div class="tarefa">
                         <div class="nome-tarefa">
@@ -152,14 +152,25 @@
                         <p>XX/XX/XX</p>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-md-2 topico">
-                <div class="col-md-12 titulo">
-                    <h1>NOME DO TÓPICO</h1>
-                    <img src="./img/menu.svg" alt="">
+                <div class="col-md-12 card-tarefa">
+                    <div class="tarefa">
+                        <div class="nome-tarefa">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25"
+                                    aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <p>Nome da tarefa</p>
+                        </div>
+                        <img src="./img/menu.svg" alt="">
+                    </div>
+
+                    <div class="data-tarefa">
+                        <img src="./img/calendario.svg" alt="">
+                        <p>XX/XX/XX</p>
+                    </div>
                 </div>
-                <button class="col-md-12 botao-adicionar">Adicionar tarefa</button>
+
                 <div class="col-md-12 card-tarefa">
                     <div class="tarefa">
                         <div class="nome-tarefa">
@@ -195,56 +206,7 @@
                         <p>XX/XX/XX</p>
                     </div>
                 </div>
-            </div>
 
-            <div class="col-md-2 topico">
-                <div class="col-md-12 titulo">
-                    <h1>NOME DO TÓPICO</h1>
-                    <img src="./img/menu.svg" alt="">
-                </div>
-                <button class="col-md-12 botao-adicionar">Adicionar tarefa</button>
-                <div class="col-md-12 card-tarefa">
-                    <div class="tarefa">
-                        <div class="nome-tarefa">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25"
-                                    aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <p>Nome da tarefa</p>
-                        </div>
-                        <img src="./img/menu.svg" alt="">
-                    </div>
-
-                    <div class="data-tarefa">
-                        <img src="./img/calendario.svg" alt="">
-                        <p>XX/XX/XX</p>
-                    </div>
-                </div>
-
-                <div class="col-md-12 card-tarefa">
-                    <div class="tarefa">
-                        <div class="nome-tarefa">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25"
-                                    aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                            <p>Nome da tarefa</p>
-                        </div>
-                        <img src="./img/menu.svg" alt="">
-                    </div>
-
-                    <div class="data-tarefa">
-                        <img src="./img/calendario.svg" alt="">
-                        <p>XX/XX/XX</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-2 topico">
-                <div class="col-md-12 titulo">
-                    <h1>NOME DO TÓPICO</h1>
-                    <img src="./img/menu.svg" alt="">
-                </div>
-                <button class="col-md-12 botao-adicionar">Adicionar tarefa</button>
                 <div class="col-md-12 card-tarefa">
                     <div class="tarefa">
                         <div class="nome-tarefa">
@@ -280,13 +242,7 @@
                         <p>XX/XX/XX</p>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-2 topico">
-                <div class="col-md-12 titulo">
-                    <h1>NOME DO TÓPICO</h1>
-                    <img src="./img/menu.svg" alt="">
-                </div>
-                <button class="col-md-12 botao-adicionar">Adicionar tarefa</button>
+
                 <div class="col-md-12 card-tarefa">
                     <div class="tarefa">
                         <div class="nome-tarefa">
@@ -323,12 +279,158 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-2 topico">
+
+            <div class="col-md-3 topico">
                 <div class="col-md-12 titulo">
                     <h1>NOME DO TÓPICO</h1>
                     <img src="./img/menu.svg" alt="">
                 </div>
-                <button class="col-md-12 botao-adicionar">Adicionar tarefa</button>
+                <button class="col-md-12 botao-adicionar"><img src="./img/mais.svg" alt=""> Adicionar tarefa</button>
+                <div class="col-md-12 card-tarefa">
+                    <div class="tarefa">
+                        <div class="nome-tarefa">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25"
+                                    aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <p>Nome da tarefa</p>
+                        </div>
+                        <img src="./img/menu.svg" alt="">
+                    </div>
+
+                    <div class="data-tarefa">
+                        <img src="./img/calendario.svg" alt="">
+                        <p>XX/XX/XX</p>
+                    </div>
+                </div>
+
+                <div class="col-md-12 card-tarefa">
+                    <div class="tarefa">
+                        <div class="nome-tarefa">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25"
+                                    aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <p>Nome da tarefa</p>
+                        </div>
+                        <img src="./img/menu.svg" alt="">
+                    </div>
+
+                    <div class="data-tarefa">
+                        <img src="./img/calendario.svg" alt="">
+                        <p>XX/XX/XX</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3 topico">
+                <div class="col-md-12 titulo">
+                    <h1>NOME DO TÓPICO</h1>
+                    <img src="./img/menu.svg" alt="">
+                </div>
+                <button class="col-md-12 botao-adicionar"><img src="./img/mais.svg" alt=""> Adicionar tarefa</button>
+                <div class="col-md-12 card-tarefa">
+                    <div class="tarefa">
+                        <div class="nome-tarefa">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25"
+                                    aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <p>Nome da tarefa</p>
+                        </div>
+                        <img src="./img/menu.svg" alt="">
+                    </div>
+
+                    <div class="data-tarefa">
+                        <img src="./img/calendario.svg" alt="">
+                        <p>XX/XX/XX</p>
+                    </div>
+                </div>
+
+                <div class="col-md-12 card-tarefa">
+                    <div class="tarefa">
+                        <div class="nome-tarefa">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25"
+                                    aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <p>Nome da tarefa</p>
+                        </div>
+                        <img src="./img/menu.svg" alt="">
+                    </div>
+
+                    <div class="data-tarefa">
+                        <img src="./img/calendario.svg" alt="">
+                        <p>XX/XX/XX</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 topico">
+                <div class="col-md-12 titulo">
+                    <h1>NOME DO TÓPICO</h1>
+                    <img src="./img/menu.svg" alt="">
+                </div>
+                <button class="col-md-12 botao-adicionar"><img src="./img/mais.svg" alt=""> Adicionar tarefa</button>
+                <div class="col-md-12 card-tarefa">
+                    <div class="tarefa">
+                        <div class="nome-tarefa">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25"
+                                    aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <p>Nome da tarefa</p>
+                        </div>
+                        <img src="./img/menu.svg" alt="">
+                    </div>
+
+                    <div class="data-tarefa">
+                        <img src="./img/calendario.svg" alt="">
+                        <p>XX/XX/XX</p>
+                    </div>
+                </div>
+
+                <div class="col-md-12 card-tarefa">
+                    <div class="tarefa">
+                        <div class="nome-tarefa">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25"
+                                    aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <p>Nome da tarefa</p>
+                        </div>
+                        <img src="./img/menu.svg" alt="">
+                    </div>
+
+                    <div class="data-tarefa">
+                        <img src="./img/calendario.svg" alt="">
+                        <p>XX/XX/XX</p>
+                    </div>
+                </div>
+
+                <div class="col-md-12 card-tarefa">
+                    <div class="tarefa">
+                        <div class="nome-tarefa">
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25"
+                                    aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                            <p>Nome da tarefa</p>
+                        </div>
+                        <img src="./img/menu.svg" alt="">
+                    </div>
+
+                    <div class="data-tarefa">
+                        <img src="./img/calendario.svg" alt="">
+                        <p>XX/XX/XX</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 topico">
+                <div class="col-md-12 titulo">
+                    <h1>NOME DO TÓPICO</h1>
+                    <img src="./img/menu.svg" alt="">
+                </div>
+                <button class="col-md-12 botao-adicionar"><img src="./img/mais.svg" alt=""> Adicionar tarefa</button>
                 <div class="col-md-12 card-tarefa">
                     <div class="tarefa">
                         <div class="nome-tarefa">
