--- a/aluno/projeto_tcc/index.html
+++ b/aluno/projeto_tcc/index.html
@@ -48,7 +48,7 @@
           <span class="tooltip">Projeto</span>
       </li>
       <li>
-          <a href="#">
+          <a href="../planner/index.html">
               <i class='bx bx-task' ></i>
               <span class="links_name">Tarefas</span>
           </a>
@@ -112,57 +112,7 @@
                             data-width="80" data-height="80"></span>
                     </div>
                     <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
+                </li>  <li class="list-group-item li-integrantes">
                     <div class="integrantes">
                         <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
                             data-width="80" data-height="80"></span>
