--- a/professor/usuarios/index.html
+++ b/professor/usuarios/index.html
@@ -178,7 +178,7 @@
             </div>
         </div>
 
-        <button onclick="showModalCriarUsuario(), alterarInputTipoUsuario()" class="button5"> <i class="fa fa-plus" style="font-size:36px"></i></button>
+        <button onclick="showModalCriarUsuario(), alterarInputTipoUsuario(), getArrayCursosAluno()" class="button5"> <i class="fa fa-plus" style="font-size:36px"></i></button>
 
         <div class="container mt-5 container modal" id="modalInfoUsuario">
             <h1 id="txtNomeUsuarioModal">NOME DO USUÁRIO</h1>
@@ -195,7 +195,7 @@
 
                 <div class="col-md-6 lab-inp">
                     <label for="senha" class="form-label">Senha:</label>
-                    <input type="password" class="form-control senha" placeholder="4259" id="inputSenhaUsuarioModal" disabled />
+                    <input type="password" class="form-control senha" placeholder="A SENHA SERÁ ENVIADA NO EMAIL DO USUÁRIO" id="inputSenhaUsuarioModal" disabled />
                 </div>
 
                 <div class="col-md-6 lab-inp">
@@ -257,7 +257,7 @@
 
                 <div class="col-md-6 lab-inp icon-edit">
                     <label for="senha" class="form-label">Senha:</label>
-                    <input type="text" class="form-control senha" placeholder="4259" id="inputSenhaUsuarioModalEditar" required maxlength="255"/>
+                    <input type="text" class="form-control senha" placeholder="A SENHA SERÁ ENVIADA NO EMAIL DO USUÁRIO" id="inputSenhaUsuarioModalEditar" required maxlength="255"/>
                     <i class="fa fa-edit" style="font-size: 24px"></i>
                 </div>
 
@@ -399,7 +399,7 @@
 
                 <div class="col-md-6 lab-inp icon-edit">
                     <label for="senha" class="form-label">Senha:</label>
-                    <input type="text" class="form-control senha" id="inputSenhaNovoUsuarioModal" required maxlength="255"/>
+                    <input type="text" class="form-control senha" id="inputSenhaNovoUsuarioModal" placeholder="A SENHA SERÁ ENVIADA NO EMAIL DO USUÁRIO" disabled required maxlength="255"/>
                 </div>
 
                 <div class="col-md-6 lab-inp">
@@ -453,39 +453,20 @@
                 <div class="col-md-6 lab-inp" id="curso-novo-aluno">
                     <label for="tipo-select" class="form-label">Curso:</label>
                     <select class="form-select tipo-select" id="cursoNovoAlunoModal">
-                        <option value="Cambodia">Cambodia</option>
-                        <option value="Khmer">Khmer</option>
-                        <option value="Thiland">Thiland</option>
-                        <option value="Koren">Koren</option>
-                        <option value="China">China</option>
-                        <option value="English">English</option>
-                        <option value="USA">USA</option>
                     </select>
                 </div>
 
                 <div class="col-md-6 lab-inp" id="turma-novo-aluno">
                     <label for="tipo-select" class="form-label">Turma:</label>
-                    <select class="form-select tipo-select" id="turmaNovoAlunoModal">
-                        <option value="Cambodia">Cambodia</option>
-                        <option value="Khmer">Khmer</option>
-                        <option value="Thiland">Thiland</option>
-                        <option value="Koren">Koren</option>
-                        <option value="China">China</option>
-                        <option value="English">English</option>
-                        <option value="USA">USA</option>
+                    <select class="form-select tipo-select" id="turmaNovoAlunoModal" onclick="getArrayTurmasAluno()">
+                        <option disabled="disabled" selected value="">SELECIONE UMA TURMA</option>
                     </select>
                 </div>
 
                 <div class="col-md-12 lab-inp" id="grupo-novo-aluno">
                     <label for="tipo-select" class="form-label">Grupo:</label>
-                    <select class="form-select tipo-select" id="grupoNovoAlunoModal">
-                        <option value="Cambodia">Cambodia</option>
-                        <option value="Khmer">Khmer</option>
-                        <option value="Thiland">Thiland</option>
-                        <option value="Koren">Koren</option>
-                        <option value="China">China</option>
-                        <option value="English">English</option>
-                        <option value="USA">USA</option>
+                    <select class="form-select tipo-select" id="grupoNovoAlunoModal" onclick="getArrayGruposAluno()">
+                        <option disabled="disabled" selected value="">SELECIONE UM GRUPO</option>
                     </select>
                 </div>
 
@@ -503,8 +484,8 @@
                     </div>
 
                     <div class="col-md-3">
-                        <button class="segundo_botao" type="submit">
-                            SALVAR
+                        <button class="segundo_botao" type="submit" id="saveUser" onclick="cadastrarAluno()">
+                            SALVAR2222
                         </button>
                     </div>
                 </div>
