--- a/aluno/projeto_tcc/index.html
+++ b/aluno/projeto_tcc/index.html
@@ -314,9 +314,9 @@
         <div class="anexos">
             <div class="documentacao">
                 <label class="label-title">Documentação do projeto:</label>
-                <a href=""><button type="button" class="primeiro_botao">VISUALIZAR PDF</button></a>
+                <a href=""><button type="button" class="primeiro_botao">VISUALIZAR ARQUIVO</button></a>
                 <input type="file" name="file" id="file" class="inputfile" multiple onchange="updateList()"></input>
-                <label class="arquivo_anexado" for="file">ANEXAR OUTRO ARQUIVO</label>
+                <label class="arquivo_anexado" for="file" id="btnOutroArquivo">ANEXAR OUTRO ARQUIVO</label>
             </div>
 
             <div class="col-md-4 anexado">
