--- a/professor/cursos/turmas/grupo/index.html
+++ b/professor/cursos/turmas/grupo/index.html
@@ -383,7 +383,7 @@
         <div class="col-md-12 documentacao_div">
             <div class="documentacao">
                 <label>Documentação do projeto:</label>
-                <button type="button" class="primeiro_botao" id="btnVerDocumentacao">VISUALIZAR PDF</button>
+                <button type="button" class="primeiro_botao" id="btnVerDocumentacao">VISUALIZAR ARQUIVO</button>
             </div>
             <div class="acoes-form-grupo">
                 <a href="../index.html">
