--- a/professor/cursos/turmas/grupo/index.html
+++ b/professor/cursos/turmas/grupo/index.html
@@ -50,7 +50,7 @@
             <span class="tooltip">Atividades</span>
         </li>
         <li>
-            <a href="#">
+            <a href="../../../arquivos/index.html">
                 <i class='bx bx-folder-open'></i>
                 <span class="links_name">Arquivos e links</span>
             </a>
