arrumando botões dos modais de grupo do professor e fazendo tela de arquivos e links

--- a/professor/arquivos/index.html
+++ b/professor/arquivos/index.html
@@ -9,6 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet" />
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+        <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="arquivos.css">
     <link rel="stylesheet" href="../componentes/header/styles_header.css">
     <link rel="stylesheet" href="../componentes/side_menu/styles_side_menu.css">
@@ -69,6 +73,19 @@
             <span class="tooltip">Log Out</span>
         </li>
     </div>
+
+    <main>
+
+        <div class="col-md-6 for-cnp cursos_existentes icon">
+            <input type="text" placeholder="Nome da pasta ou arquivo que procura:" class="form-control cursos_ex" />
+            <i class="fa fa-search" style="font-size: 24px"></i>
+        </div>
+
+        <h4 id="caminhoArquivo">Arquivos e Links > Prof. Nome > Atividades</h4>
+
+        div.ar
+
+    </main>
 
     <script>
         let sidebar = document.querySelector(".sidebar");
