--- a/professor/cursos/turmas/grupo/index.html
+++ b/professor/cursos/turmas/grupo/index.html
@@ -415,7 +415,7 @@
 
             <div class="buttons">
                 <div class="col-md-3">
-                    <button class="primeiro_botao" type="button" onclick="exitModalCriarAlunoGrupo()">
+                    <button class="quinto_botao" type="button" onclick="exitModalCriarAlunoGrupo()">
                         CANCELAR
                     </button>
                 </div>
@@ -447,7 +447,7 @@
 
             <div class="buttons">
                 <div class="col-md-6">
-                    <button class="primeiro_botao" type="button" onclick="exitModalAddProfessorGrupo()">
+                    <button class="quinto_botao" type="button" onclick="exitModalAddProfessorGrupo()">
                         CANCELAR
                     </button>
                 </div>
@@ -536,13 +536,13 @@
             
             <div class="buttons">
                 <div class="col-md-3">
-                    <button class="primeiro_botao" type="button" onclick="exitModalEditarAluno()">
+                    <button class="quinto_botao" type="button" onclick="exitModalEditarAluno()">
                         CANCELAR
                     </button>
                 </div>
 
                 <div class="col-md-3">
-                    <button class="primeiro_botao" id="btnExcluirAluno" type="button" onclick="showModalExcluirUsuarioGrupo()">
+                    <button class="quinto_botao" id="btnExcluirAluno" type="button" onclick="showModalExcluirUsuarioGrupo()">
                         EXCLUIR
                     </button>
                 </div>
