tela de curso da instituição arrumada

--- a/instituicao/cursos/index.html
+++ b/instituicao/cursos/index.html
@@ -145,7 +145,7 @@
                     </button>
                 </div>
                 <div class="col-md-6">
-                    <button id="terceiro_botao" type="button">SALVAR</button>
+                    <button id="terceiro_botao" class="primeiro_botao" type="button">SALVAR</button>
                 </div>
             </div>
         </div>
@@ -162,7 +162,7 @@
                 </button>
             </div>
             <div class="col-md-12">
-                <button id="quarto_botao_confirmar" type="submit">CONFIRMAR</button>
+                <button id="quarto_botao_confirmar" class="quarto_botao" type="submit">CONFIRMAR</button>
             </div>
         </div>
     </div>
