--- a/professor/arquivos/index.html
+++ b/professor/arquivos/index.html
@@ -81,9 +81,49 @@
             <i class="fa fa-search" style="font-size: 24px"></i>
         </div>
 
-        <h4 id="caminhoArquivo">Arquivos e Links > Prof. Nome > Atividades</h4>
+        <div class="caminho-arquivo">
+            <h4>Arquivos e Links ></h4>
+            <a href="#">
+                <h4>Prof. Nome ></h4>
+            </a>
+            <a href="#">
+                <h4>Atividades</h4>
+            </a>
+        </div>
 
-        div.ar
+        <div class="container-arquivos">
+
+            <div class="pasta-arquivo">
+                <img src="img/icone_pasta.svg" alt="pasta">
+                <p id="nomeArquivoPasta">Exemplo</p>
+                <img src="" alt="">
+            </div>
+
+            <div class="pasta-arquivo">
+                <img src="img/icone_pasta.svg" alt="pasta">
+                <p id="nomeArquivoPasta">Exemplo</p>
+                <img src="" alt="">
+            </div>
+
+            <div class="pasta-arquivo">
+                <img src="img/icone_pasta.svg" alt="pasta">
+                <p id="nomeArquivoPasta">Exemplo</p>
+                <img src="" alt="">
+            </div>
+
+            <div class="pasta-arquivo">
+                <img src="img/icone_pasta.svg" alt="pasta">
+                <p id="nomeArquivoPasta">Exemplo</p>
+                <img src="" alt="">
+            </div>
+
+            <div class="pasta-arquivo">
+                <img src="img/icone_pasta.svg" alt="pasta">
+                <p id="nomeArquivoPasta">Exemplo</p>
+                <img src="" alt="">
+            </div>
+
+        </div>
 
     </main>
 
