--- a/aluno/perfil/index.html
+++ b/aluno/perfil/index.html
@@ -30,7 +30,7 @@
   <header>
     <div class="primeira_parte">
         <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-        <h1 id="nomeGrupoAluno">NOME DO GRUPO</h1>
+        <h1 id="nomeAluno"></h1>
     </div>
 
     <a href="./index.html">
@@ -93,26 +93,26 @@
 
   <div class="container">
     <div class="text-center">
-      <img src="./img/pessoa-sorrindo.webp" id="imgPerfil" width="200" height="200" class="rounded-circle" />
+      <img id="imgPerfil" width="200" height="200" class="rounded-circle" />
     </div>
     <form class="row g-3 formPerfil">
       <div class="col-md-12 lab-inp">
         <label for="nome" class="form-label">NOME</label>
-        <input id="nome" type="text" class="form-control nome" placeholder="Alice" disabled />
+        <input id="nome" type="text" class="form-control nome" placeholder="" disabled />
       </div>
 
       <div class="col-md-12 lab-inp">
         <label for="email" class="form-label">E-MAIL</label>
-        <input id="email" type="email" class="form-control email" placeholder="alice@gmail.com" disabled />
+        <input id="email" type="email" class="form-control email" placeholder="" disabled />
       </div>
 
       <div class="col-md-12 lab-inp">
         <label for="senha" class="form-label">SENHA</label>
-        <input id="senha_instituicao" type="password" class="form-control senha" placeholder="******" disabled />
+        <input id="senha" type="password" class="form-control senha" placeholder="" disabled />
       </div>
       <div class="buttons">
         <div class="col-md-6">
-          <a href="./editar/index.html"><button class="botao_editar" type="button">EDITAR</button></a>
+          <button id="button-editar" class="botao_editar" type="button">EDITAR</button>
         </div>
       </div>
 
