--- a/aluno/projeto_tcc/index.html
+++ b/aluno/projeto_tcc/index.html
@@ -26,7 +26,7 @@
     <header>
         <div class="primeira_parte">
             <img src="../componentes/header/img/grupo_pessoas.svg" alt="grupo_pessoas" />
-            <h1 id="nomeGrupoAluno">NOME DO GRUPO</h1>
+            <h1 id="nomeAluno">NOME DO GRUPO</h1>
         </div>
     
         <a href="../perfil/index.html">
@@ -90,178 +90,37 @@
     <div class="grupo">
         <div class="tema">
             <h1>Tema do projeto:</h1>
-            <p>Sistema para gerenciamento de Trabalho de Conclusão de Curso</p>
+            <p id="p_tema_projeto"></p>
         </div>
 
         <div class="descricao">
             <h1>Descrição do projeto:</h1>
             <div contentEditable="true">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt nisl velit, in dapibus
-                    lectus tristique vitae. Ut ut ullamcorper tortor. Nullam sed velit diam. Suspendisse vehicula
-                    lacinia
-                    fermentum. Sed non ultricies lacus.</p>
+                <p id="p_descricao_projeto"></p>
             </div>
         </div>
 
         <div class="cont-integrantes">
             <h1>Integrantes do grupo:</h1>
-            <ul class="list-group ul-integrantes">
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>  <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-integrantes">
-                    <div class="integrantes">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-            </ul>
+            <ul id="ul_integrantes" class="list-group ul-integrantes">
+                <li class="list-group-item li-integrantes"> </ul>
         </div>
 
-        <div class="cont-orientadores">
+        <!-- <div class="cont-orientadores">
             <h1>Orientadores do grupo:</h1>
-            <ul class=" list-group ul-orientadores">
-                <li class="list-group-item li-orientadores">
-                    <div class="orientadores">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-orientadores">
-                    <div class="orientadores">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-                <li class="list-group-item li-orientadores">
-                    <div class="orientadores">
-                        <span class="iconify icon" data-icon="carbon:user-avatar-filled-alt" style="color: #05204a;"
-                            data-width="80" data-height="80"></span>
-                    </div>
-                    <p>NOME</p>
-                </li>
-            </ul>
-        </div>
+            <ul id="ul_professores" class=" list-group ul-orientadores">
+                <li class="list-group-item li-orientadores"> </ul>
+        </div> -->
 
-        <div class="barra_progresso">
+        <!-- <div class="barra_progresso">
             <label>Andamento do projeto:</label>
             <div class="progress">
                 <div class="progress-bar progress_bar" role="progressbar" style="width: 90%;" aria-valuenow="25"
                     aria-valuemin="0" aria-valuemax="100">90%</div>
             </div>
-        </div>
-        <div class="anexos">
+        </div> -->
+
+        <!-- <div class="anexos">
             <div class="documentacao">
                 <label class="label-title">Documentação do projeto:</label>
                 <a href=""><button type="button" class="primeiro_botao">VISUALIZAR ARQUIVO</button></a>
@@ -272,7 +131,7 @@
             <div class="col-md-4 anexado">
                 <label id="fileList" class="terceiro_botao"></label>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <script>
