Integração - Turma, Curso e Grupo

--- a/instituicao/cursos/turmas/index.html
+++ b/instituicao/cursos/turmas/index.html
@@ -499,6 +499,7 @@
     <div class="container mt-5 container modal modal-grupos">
         <h1>GRUPOS DE TCC DA TURMA</h1>
         <ul class="list-group ul-grupo">
+            <p id="p_nenhuma_turma"></p>
             <li id="li_grupos" class="list-group-item li"> </li>
         </ul>
 
